--- a/FACEBU/facebu/src/app/components/events/events.component.html
+++ b/FACEBU/facebu/src/app/components/events/events.component.html
@@ -15,7 +15,17 @@
     </section>
     <p> Mis Eventos</p>
     <section class="miseventos">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, dolore aliquid. Dolor ipsam neque reprehenderit nam atque. Alias ab facilis maxime autem, eos rerum enim placeat! Vitae sint laudantium qui.</p>
+
+        <ul>
+            <li type="none" *ngFor="let ev of myEvents">
+                Nombre: {{ev.name}}
+                <br>Descripción: {{ev.description}}<br>
+                Fecha:<br>{{ev.eventDate}}
+                <button (click)="deleteEventById(ev.id)">X</button>
+            </li>
+
+        </ul>
+
     </section>
     <p> Explorar Eventos</p>
     <section class=bloque>
@@ -28,9 +38,7 @@
                 <button (click)="deleteEventById(ev.id)">X</button>
             </li>
 
-
         </ul>
-
 
     </section>
 
