--- a/FACEBU/facebu/src/app/components/friends/friends.component.css
+++ b/FACEBU/facebu/src/app/components/friends/friends.component.css
@@ -8,3 +8,10 @@
     border: 1px solid ;
     justify-content: space-around;
 }
+.amigos{
+    border-style: dashed;
+}
+.nuevos{
+    border-style: dashed;
+
+}
