--- a/FACEBU/facebu/src/app/app.component.html
+++ b/FACEBU/facebu/src/app/app.component.html
@@ -34,7 +34,7 @@
 
 <footer>
   <p>Copyright Yo Mismo - 2019 - Ulab EOI</p>
-  <p>Rube Garcia - Ruben Esquerdo - Antonio Mas</p>
+  <p>Ruben Garcia - Ruben Esquerdo - Antonio Mas</p>
 </footer>
 
 </html>
