--- a/FACEBU/facebu/src/app/components/events/events.component.html
+++ b/FACEBU/facebu/src/app/components/events/events.component.html
@@ -25,7 +25,8 @@
                 Nombre: {{ev.name}}
                 <br>Descripción: {{ev.description}}<br>
                 Fecha:<br>{{ev.eventDate}}
-                <button (click)="deleteEventById(ev.id)">X</button>
+                <button (click)="deleteEventById(ev.id)"><img class ="icons" src="../../../assets/images/cross.png"/></button>
+                <button><img class ="icons" src="../../../assets/images/tick.png"/></button>
             </li>
 
 
