--- a/FACEBU/facebu/src/app/components/profile/profile.component.html
+++ b/FACEBU/facebu/src/app/components/profile/profile.component.html
@@ -1,1 +1,12 @@
-<p>profile works!</p>
+
+<section class="datos">
+        <p>Mis Datos Personales</p>
+</section>
+<section class="padre">
+    <section class="mishistorias">
+        <p>Seccion de Mis Historiertas</p>
+    </section>
+    <section class="miscolegas">
+        <p>Seccion de Mis Coleguillas</p>
+    </section>
+</section>
