--- a/FACEBU/facebu/src/app/components/stories/stories.component.html
+++ b/FACEBU/facebu/src/app/components/stories/stories.component.html
@@ -1,1 +1,20 @@
-<p>stories works!</p>
+<section>
+        <section class=rutas>
+            <!-- nuevo event-->
+    
+            <form class="formulario" #f="ngForm" (ngSubmit)="addEvent(f)" novalidate>
+                <fieldset>
+                    <legend>Di algo</legend>
+                        <textarea rows="10" cols="110"></textarea>
+                    <button>Publicar</button>
+                </fieldset>
+            </form>
+    
+        </section>
+        <p> Mis Historietas</p>
+        <section class="mishistorias">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, dolore aliquid. Dolor ipsam neque reprehenderit nam atque. Alias ab facilis maxime autem, eos rerum enim placeat! Vitae sint laudantium qui.</p>
+        </section>
+      
+    
+    </section>
