--- a/FACEBU/facebu/src/app/app.component.css
+++ b/FACEBU/facebu/src/app/app.component.css
@@ -6,7 +6,7 @@ body{
 footer{
     margin-left: 20%;
     margin-right: 20%;
-    background-color: chocolate;
+    background-color:rgb(243, 202, 113);
     margin-top: 1%;
 }
 .cabecera{
@@ -14,6 +14,7 @@ footer{
     display: flex;
     margin-left: 20%;
     margin-right: 20%;
+    margin-bottom: -2%;
     /*border-style: dotted;*/
     background-image: url('../assets/images/fondo.jpg');
 }
@@ -37,7 +38,7 @@ section > img{
 }
 footer > p{
     font-family: Courier;
-    color:rgb(68, 67, 67);
+    color:grey;
     text-decoration-line: none;
 }
 nav{
